[style] delete unused styles

--- a/ui/app/styles/filter-result.scss
+++ b/ui/app/styles/filter-result.scss
@@ -1,5 +1,6 @@
  @import "./variables";
 
+ /*
 ul.selection-list li.sl-line {
   padding-left: 10px;
   min-height: 60px;
@@ -46,3 +47,4 @@ ul.selection-list li.sl-line {
   width: 100%;
   text-align: center;
 }
+*/
