--- a/ui/app/styles/variables.scss
+++ b/ui/app/styles/variables.scss
@@ -1,4 +1,4 @@
-// variables
+/*// variables
 $color-blanc:   #FFF;
 $color-vert:    #36b7b9;
 $color-vert2:   #6acacb;
@@ -14,7 +14,7 @@ $color-noir:    #000;
 $color-noir2:   #242a30;
 $font-family: "Roboto";
 $color-background: #f8f8f8;
-
+*/
 
 body {
  border: 0;
