--- a/ui/app/styles/quick-search.scss
+++ b/ui/app/styles/quick-search.scss
@@ -1,241 +1,6 @@
- @import "./variables";
 
-/** links to filter result css */
 
-.linkFilterResult {
-  text-align: right;
-  padding-right: 10px;
-  float: right;
-  a {
-    text-decoration: none;
-    padding: 5px;
-    border: 1px solid $color-gris2;
-    background: #f5f5f5;
-  }
+[data-focus="quick-search"]{
+  height: 100vh;
 }
 
-/** preview line css */
-.movie-preview-detailed-sheet {
-  text-align: center;
-  cursor: pointer;
-  text-transform: uppercase;
-  margin-top: 50px;
-  a {
-    border: 1px solid $color-vert;
-    color: $color-vert;
-    text-decoration: none;
-    padding: 5px 7px;
-    border-radius: 15px;
-  }
-}
-
-.movie-descrition {
-  padding: 10px 0 20px 0;
-  border-bottom: 1px  $color-gris2 solid;
-}
-
-.line-preview {
-  background-color:  $color-blanc;
-  padding: 5px 5px;
-}
-
-.btn-preview {
-  box-shadow: none !important;
-  width: 40px !important;
-  height: 40px !important;
-  color: #FFF !important;
-  background-color: $color-gris2 !important;
-  border-radius: 20px;
-  font-size: 27px;
-  padding: 0 !important;
-  margin: 15px 0 0 0 !important;
-}
-
- .btn-preview:hover{
-   background-color: $color-vert3 !important;
- }
-
-.linkAdvancedSearch {
-  text-align: right;
-  padding-right: 10px;
-  text-transform: uppercase;
-  cursor: pointer;
-  a {
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 15px;
-    border: 1px solid  $color-gris2;
-    color: $color-gris;
-  }
-}
-
-.quick-search-popin {
-  margin: 0 0 0 0 !important;
-  padding-left: 60px;
-  z-index: 1004;
-  height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
-  width: 50%;
-  .full {
-    min-height: 100%;
-  }
-  .popin-close-btn {
-    margin-top: 22px;
-  }
-}
-
-.quick-search-popin-header {
-  font-size: 24px;
-  padding: 20px 0 20px 30px;
-}
-
-.preview-popin {
-  margin: 0 0 0 20px !important;
-  z-index: 1004;
-  height: 100%;
-  width: 50%;
-  .full {
-    min-height: 100%;
-  }
-  .modal-content {
-    background-color: $color-gris3 !important;
-    box-shadow: none !important;
-  }
-  .popin-close-btn.left {
-    float: right;
-    margin-top: 15px;
-  }
-}
-
-.preview-popin-header {
-  background: $color-gris3;
-  height: 27px;
-}
-
-.movie-details {
-  padding: 10px 0 20px 0;
-  .movie-detail-line {
-    width: 100%;
-    display: inline-block;
-  }
-  .details-label-name {
-    float: left;
-    width: 150px;
-    text-align: right;
-    font-weight: bold;
-  }
-  .details-label-value {
-    float: left;
-    padding-left: 20px;
-  }
-}
-
- .qs-help-container {
-   position: fixed;
-   top: 30%;
-   left: 105%;
-   font-size: 19px;
-   font-family: Roboto;
-   font-style: italic;
-   width: 280px;
-   color: $color-blanc;
-   border: 1px solid transparent;
-   img {
-     float: left;
-     margin-right: 5px;
-     margin-top: 5px
-   }
- }
-
- .group-result-header {
-   border-bottom: 1px solid $color-gris2;
-   padding-bottom: 15px;
-   display: inline-block;
-   width: 100%;
-   font-size: 14px;
- }
-
- .qs-group-results {
-   box-shadow: none !important;
-   li {
-     border-bottom: 1px solid $color-gris2;
-   }
- }
- .qs-results-most-relevents {
-   width: 150px;
-   color: $color-gris;
-   font-size: 14px;
-   float: left;
- }
-
- .movie-preview-picture {
-   width: 175px;
-   height:  260px;
-   border: 1px solid $color-gris;
-   background-color: $color-gris2;
-   float: left;
- }
- .movie-preview-description {
-   margin-left: 200px;
-   font-size: 14px;
-   .title-level-1 {
-     font-size: 20px;
-   }
-   .genres {
-     margin-top: 20px;
-   }
-   .description {
-     margin-top: 50px;
-   }
- }
-
- .movie-preview-imdb-id {
-   font-weight: bold;
- }
-
- .movie-preview-detail {
-   margin-top: 30px;
-   font-size: 14px;
-   .title {
-     color: $color-gris;
-     font-weight: bold;
-     font-size: 18px;
-     width: 100px;
-     float: left;
-     margin-bottom: 15px;
-   }
-   .movie-detail-label {
-     font-weight: bold;
-     width: 120px;
-     float: left;
-     text-align: right;
-     margin-right: 20px;
-   }
-   .movie-detail-line {
-     margin-bottom: 10px;
-     display: inline-block;
-     width: 100%;
-   }
- }
- .title-line {
-   margin-left: 80px;
-   padding-top: 15px;
-   border-bottom: 1px solid $color-gris2;
- }
-
- .movie-preview-release-date {
-   margin-bottom: 0;
-   .form-control {
-     font-size: 14px;
-     background-image: none;
-     height: auto;
-   }
- }
-
- #qs-affix {
-   position: inherit;
- }
-
- #qs-affix.affix-top {
- }
