--- a/ui/app/styles/movie.scss
+++ b/ui/app/styles/movie.scss
@@ -1,13 +1,16 @@
+$movie-poster-witdh:300px;
 
-[data-focus='header']{
+[data-focus='header'] {
   .cartridge-movie {
-    display: flex;
-    flex-direction: row;
+    //display: flex;
+    //flex-direction: row; //(flex ne fonctionne pas sous safari pour le moment)
+    min-height: $movie-poster-witdh;
+    margin-left: 180px;
 
     .poster {
-      border:1px solid red;
       width: 250px;
-      height: 300px;
+      height: $movie-poster-witdh;
+      float:left;
       border: 1px solid #B2B2B2;
       background-color: #F8F8F8;
       text-align: center;
@@ -15,10 +18,11 @@
     }
     .summary {
       padding: 0 30px;
+      margin-left: 270px;
 
       h1 {
         margin: 0 0 10px 0;
-        color:rgb(54, 183, 185);
+        color: rgb(54, 183, 185);
       }
       h2 {
         margin: 0 0 10px 0;
@@ -26,6 +30,17 @@
       h3 {
         margin: 0 0 10px 0;
       }
+    }
+  }
+}
+
+[data-focus="selection-list"] {
+  li[data-focus="sl-line"] {
+    [data-focus="sl-icon"] {
+      line-height: 75px;
+    }
+    .movie-line {
+      min-height: 75px;
     }
   }
 }
