--- a/ui/app/styles/search.scss
+++ b/ui/app/styles/search.scss
@@ -1,82 +1,16 @@
-@import "./variables";
-$sidebar-width: 60px;
 
-ul.selection-list li.sl-line:hover {
-  background: $color-gris4;
-}
+[data-focus="group-result-container"] {
+  margin-bottom: 40px;
+  .title-navigation {
+    display: inline-block;
+    width: 100%;
+    h1, h2, h3, h4 {
 
-.mov-logo {
-  float: left;
-  width: 40px;
-  height: 40px;
-  margin: 5px 5px 0 0;
-}
-
-.movie-background {
-  font-size: 40px;
-  margin: 5px 5px 0 0;
-  float: left;
-}
-
-.welcome-title {
-  text-align: center;
-  font-size: 45px;
-  color: #1A3481;
-}
-
-.container-title, .details-panel-title {
-  font-size: 16px;
-  text-transform: uppercase;
-  color: #acacac;
-}
-
-.results {
-  text-align: left;
-  padding-left: 10px;
-  float: left;
-}
-
-.summary {
-  background: $color-blanc;
-  display: inline-block;
-  width: 100%;
-  padding: 10px 0;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-
-.title-level-1, .title-level-2, .title-level-3 {
-  margin-bottom: 0;
-}
-.title-level-1 {
-  color: $color-vert2;
-  .form-control {
-    font-size: 16px;
-    font-weight: bold;
-    color: $color-vert2;
-    background-image: none;
+    }
+    .btn {
+      float: right;
+    }
   }
 }
 
-.title-level-2 .form-control {
-  font-size: 14px;
-  font-weight: bold;
-  background-image: none;
-}
 
-.title-level-3 .form-control {
-  font-size: 14px;
-  background-image: none;
-}
-
-.title-group-key {
-  margin: 2px 0 5px 5px;
-  color: $color-vert2;
-  font-size: 20px;
-  padding-top: 5px;
-}
-
-.item {
-  margin-left: 55px;
-}
