--- a/ui/app/styles/font.scss
+++ b/ui/app/styles/font.scss
@@ -1,2 +1,2 @@
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400italic,700italic,300,700,300italic,400|Raleway:700,400,300);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
