--- a/api/.settings/org.eclipse.wst.common.component
+++ b/api/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/javagen"/>
         <dependent-module archiveName="vertigo-core-0.8.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/vertigo-core/vertigo-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
