--- a/ui/app/styles/default.scss
+++ b/ui/app/styles/default.scss
@@ -3,5 +3,5 @@
 [data-focus="menu"] [data-focus="menu-brand"] {
   background: #424950 url('../img/brand.png') no-repeat;
   background-position: 50%;
-  background-repeat: no-repeat;;
+  background-repeat: no-repeat;
 }
